# vala

./: Makefile.am  configure.ac  meson.build  version.h.meson
ccode/: meson.build
codegen/: Makefile.am  meson.build  valaccodearraymodule.vala  valaccodeassignmentmodule.vala  valaccodebasemodule.vala  valaccodecontrolflowmodule.vala  valaccodedelegatemodule.vala  valaccodemethodcallmodule.vala  valaccodemethodmodule.vala  valaccodetransformer.vala  valagasyncmodule.vala  valagdbusclientmodule.vala  valagdbusclienttransformer.vala  valagdbusmodule.vala  valagdbusservermodule.vala  valagdbusservertransformer.vala  valagerrormodule.vala  valagobjectmodule.vala  valagvariantmodule.vala  valagvarianttransformer.vala
compiler/: meson.build  valacompiler.vala
doc/: meson.build
gee/: meson.build
gobject-introspection/: meson.build
tests/: Makefile.am  testrunner.sh
tests/basic-types/: arrays.vala  bug761736.vala
tests/chainup/: class-with-lambda.vala
tests/dbus/: basic-types.test  filedescriptor-errors.test
tests/delegates/: bug659778.vala
tests/objects/: bug785570.vala
vala/: Makefile.am  meson.build  valaarraycreationexpression.vala  valaassignment.vala  valabaseaccess.vala  valabinaryexpression.vala  valablock.vala  valabreakstatement.vala  valacastexpression.vala  valacatchclause.vala  valaclass.vala  valacodebuilder.vala  valacodecontext.vala  valacodenode.vala  valacodetransformer.vala  valacodewriter.vala  valaconditionalexpression.vala  valaconstant.vala  valaconstructor.vala  valacreationmethod.vala  valadeclarationstatement.vala  valadelegate.vala  valadeletestatement.vala  valadostatement.vala  valaelementaccess.vala  valaemptystatement.vala  valaenum.vala  valaerrortype.vala  valaexpressionstatement.vala  valafield.vala  valaflowanalyzer.vala  valaforeachstatement.vala  valaforstatement.vala  valagenieparser.vala  valagirparser.vala  valaifstatement.vala  valainitializerlist.vala  valainterface.vala  valalambdaexpression.vala  valalocalvariable.vala  (+33 more)
vapi/: Makefile.am  config.vapi  dbus-glib-1.vapi  gio-2.0.vapi  gtk+-3.0.vapi  libgsf-1.vapi  libnm-glib.deps  libnm-glib.vapi  libnm-utils.deps  libnm-utils.vapi
vapi/metadata/: Gio-2.0.metadata  Gsf-1.metadata  Gtk-3.0-custom.vala  Gtk-3.0.metadata  NMClient-1.0.metadata  NetworkManager-1.0.metadata
vapigen/: meson.build  valagidlparser.vala
vapigen/vala-gen-introspect/: meson.build
